adds get_resource endpoint
